--- a/files/ansible.cfg
+++ b/files/ansible.cfg
@@ -5,3 +5,10 @@ callback_enabled = ansible.posix.profile_tasks
 # cores must be int, jinga always returns strings
 # https://gist.github.com/mkrizek/dbcf415b485fc3f2d4b3676ce0013397
 jinja2_native = true
+
+# [galaxy_server.automation_hub]
+# url=https://console.redhat.com/api/automation-hub/
+# auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
+
+# [galaxy_server.release_galaxy]
+# url=https://galaxy.ansible.com/
