--- a/lab.yaml
+++ b/lab.yaml
@@ -26,7 +26,7 @@ additional_build_steps:
     - ARG ANSIBLE_GALAXY_SERVER_AUTOMATION_HUB_TOKEN
 
     - ENV ANSIBLE_GALAXY_SERVER_LIST=automation_hub,release_galaxy
-    - ENV ANSIBLE_GALAXY_SERVER_AUTOMATION_HUB_URL=https://console.redhat.com/api/automation-hub/
+    - ENV ANSIBLE_GALAXY_SERVER_AUTOMATION_HUB_URL=https://console.redhat.com/api/automation-hub/content/published/
     - ENV ANSIBLE_GALAXY_SERVER_AUTOMATION_HUB_AUTH_URL=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
     - ENV ANSIBLE_GALAXY_SERVER_RELEASE_GALAXY_URL=https://galaxy.ansible.com/
 
