--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,46 +1,23 @@
 collections:
-  - name: kubernetes.core
-    version: 5.0.0
-    source: https://console.redhat.com/api/automation-hub/
-
-  - name: redhat.openshift_virtualization
-    version: 2.0.0
-    source: https://console.redhat.com/api/automation-hub/
-
-  - name: redhat.insights
-    version: 1.3.0
-    source: https://console.redhat.com/api/automation-hub/
-
-  - name: redhat.satellite
-    version: 4.1.0
-    source: https://console.redhat.com/api/automation-hub/
-
+  # 4.6 is required for AAP 2.5
   - name: ansible.controller
-    version: 4.5.8
-    source: https://console.redhat.com/api/automation-hub/
-
-  - name: amazon.aws
-    version: 8.1.0
-    source: https://console.redhat.com/api/automation-hub/
-
-  - name: ansible.posix
-    version: 1.5.4
-    source: https://galaxy.ansible.com
+    version: 4.6.2
+    source: "https://console.redhat.com/api/automation-hub/content/published/"
 
   - name: community.libvirt
     version: 1.3.0
     source: https://galaxy.ansible.com
 
-  - name: community.docker
-    version: 3.11.0
-    source: https://galaxy.ansible.com
-
   - name: community.general
-    version: 9.2.0
+    version: 10.0.1
     source: https://galaxy.ansible.com
 
   - name: infra.aap_utilities
     version: 2.5.2
+    source: https://galaxy.ansible.com
+
+  - name: infra.aap_configuration
+    version: 3.1.0
     source: https://galaxy.ansible.com
 
   - name: infra.ee_utilities
@@ -48,11 +25,11 @@ collections:
     source: https://galaxy.ansible.com
 
   - name: infra.ah_configuration
-    version: 2.0.6
+    version: 2.1.0
     source: https://galaxy.ansible.com
 
   - name: infra.controller_configuration
-    version: 2.9.0
+    version: 2.11.0
     source: https://galaxy.ansible.com
 
   - name: infra.eda_configuration
